Closed Bug 1655239 Opened 4 years ago Closed 4 years ago

setPointerCapture does not work across Fission frames

Categories

(Core :: DOM: UI Events & Focus Handling, defect, P2)

80 Branch
defect

Tracking

()

RESOLVED FIXED
84 Branch
Fission Milestone M6c
Tracking Status
firefox84 --- fixed

People

(Reporter: robbendebiene, Assigned: edgar)

References

(Blocks 2 open bugs)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:78.0) Gecko/20100101 Firefox/78.0

Steps to reproduce:

Using element.setPointerCapture on an element inside an iframe normally re-targets all mouse events across frames to one particular element.

Best way to test this is using the example on MDN here: https://developer.mozilla.org/en-US/docs/Web/API/Element/setPointerCapture

This does not work when Fission is enabled.

Actual results:

The mouse movement is not detected outside of the iframe.

Expected results:

The mouse events should be redirected to the element inside the iframe on which setPointerCapture was called on.

Thank you for the report, I've confirmed this on Nightly 80 with Fission. Probably a blocker for Nightly or Beta rollout.

Status: UNCONFIRMED → NEW
Fission Milestone: --- → ?
Component: Untriaged → DOM: Events
Ever confirmed: true
Product: Firefox → Core
Severity: -- → S3
Priority: -- → P2
No longer blocks: fission-webext

Fission M6c

Fission Milestone: ? → M6c

Olli reported the failure with pointer capture: http://mozilla.pettay.fi/moztests/pointercapture_parent.html

Component: DOM: Events → DOM: UI Events & Focus Handling

This seems like a similar issue as the pointer lock bug we had in bug 1662587, i.e. the mouse event doesn't dispatch to the right process. I will take a look.

Assignee: nobody → echen
Severity: S3 → S2
Status: NEW → ASSIGNED
Blocks: 822898

I tried to write a test for implicit pointer capture for touch event, and just realized we didn't support dispatching touch event asynchronously.

(In reply to Edgar Chen [:edgar] from comment #8)

I tried to write a test for implicit pointer capture for touch event, and just realized we didn't support dispatching touch event asynchronously.

I did some quick try but failed to make it work, file bug 1672726 to add tests for implicit pointer capture for fission.

I have verified manually on Surface Pro that implicit pointer capture for touch events works on Fission.

Pushed by echen@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/82dc435b2c6d
Make pointer capture fission compatible; r=smaug
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch
See Also: → 1680405
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: