Bug 1655239 - Make pointer capture fission compatible; r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D94297