dom/ipc/BrowserParent.h
@@ -785,6 +785,10 @@ class BrowserParent final : public PBrowserParent,
       RequestPointerLockResolver&& aResolve);
   mozilla::ipc::IPCResult RecvReleasePointerLock();
 
+  mozilla::ipc::IPCResult RecvRequestPointerCapture(
+      const uint32_t& aPointerId, RequestPointerCaptureResolver&& aResolve);
+  mozilla::ipc::IPCResult RecvReleasePointerCapture(const uint32_t& aPointerId);
+
  private:
   void SuppressDisplayport(bool aEnabled);
 
